--- a/Razzle/Razzle/Views/Shared/RazzleTemplates/_NavBarPartial.cshtml
+++ b/Razzle/Razzle/Views/Shared/RazzleTemplates/_NavBarPartial.cshtml
@@ -1,10 +1,7 @@
-﻿@{
-	var scrollTopOffset = -50;
-}
-<nav class="navbar navbar-default navbar-fixed-top razzle-top-navbar">
+﻿<nav class="navbar navbar-default navbar-fixed-top razzle-top-navbar">
 	<div class="container">
 		<div class="pull-right mtm">
-			@(Html.Partial("_PaypalPartial"))
+			@(Html.Paypal())
 		</div>
 		<div class="pull-right mtm mrl">
 			<span class="logo small logo-hidden" data-scroll-show-low="200" data-scroll-toggle="logo-hidden"></span>
