--- a/Razzle/Razzle/Views/Shared/_MetaPartial.cshtml
+++ b/Razzle/Razzle/Views/Shared/_MetaPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	var imageName = Html.SiteName().ToString().Slug();
 }
+<meta charset="utf-8" />
 
 <meta name="msapplication-TileColor" content="#FFFFFF">
 <link href="~/assets/images/@(imageName)-16.png" rel="shortcut icon" type="image/png" />
