--- a/Razzle/Razzle/assets/styles/razzle.less
+++ b/Razzle/Razzle/assets/styles/razzle.less
@@ -321,6 +321,10 @@ body {
 			margin: 3px;
 		}
 
+		&.razzle-top-navbar-hidden {
+			display: none;
+		}
+
 		&.expandable-label {
 			position: relative;
 			white-space: nowrap;
@@ -369,6 +373,10 @@ body {
 			font-size: 0;
 			border-top: solid 1px @razzle-nav-border;
 			margin: 2px 0 2px 0;
+		}
+
+		&.razzle-side-navbar-hidden {
+			display: none;
 		}
 	}
 }
