--- a/Razzle/Razzle/Views/Documentation/_LicensePartial.cshtml
+++ b/Razzle/Razzle/Views/Documentation/_LicensePartial.cshtml
@@ -4,7 +4,7 @@
 		<div class="panel-heading"><h1 class="zero lowercase"><i class="fa fa-certificate mrm"></i>License</h1></div>
 		<div class="panel-body">
 			<div class="gist-container">
-				@(Html.Action("Gist", "Assets", new { id = "3d408440566327fe5c62" }))
+				@(Html.Action("Gist", new { controller = "assets", id = "3d408440566327fe5c62", allowCopy = false }))
 			</div>
 		</div>
 	</div>
