--- a/Razzle/Razzle/assets/styles/main.less
+++ b/Razzle/Razzle/assets/styles/main.less
@@ -27,18 +27,18 @@
 
 
 .logo {
-	background-image: url(../images/razzle-114.png);
+	background-image: url(../images/razzle-120-light.png);
 	background-repeat: no-repeat;
 	background-position: center center;
-	height: 114px;
-	width: 114px;
+	height: 120px;
+	width: 120px;
 	margin-right: 20px;
 	display: inline-block;
 	opacity: 1;
 	.transition(opacity);
 
 	&.small {
-		background-image: url(../images/razzle-32.png);
+		background-image: url(../images/razzle-32-light.png);
 		height: 32px;
 		width: 32px;
 	}
