Removed duplicate meta-icon. added css for other projects

--- a/Razzle/Razzle/assets/styles/main.less
+++ b/Razzle/Razzle/assets/styles/main.less
@@ -10,15 +10,32 @@
 }
 
 .icon-camalotcommon {
-	background-image: url("//camalotcommon.bit13.com/assets/images/icon-16.png");
+	background-image: url("//camalotcommon.bit13.com/assets/images/camalot-common-16.png");
 	background-repeat: no-repeat;
 	height: 16px;
 	width: 16px;
 	display: inline-block;
 }
 
+.icon-razzle {
+	background-image: url("//razzle.bit13.com/assets/images/razzle-16.png");
+	background-repeat: no-repeat;
+	height: 16px;
+	width: 16px;
+	display: inline-block;
+}
+
+
 .icon-endpointmvc {
 	background-image: url("//endpointmvc.bit13.com/assets/images/endpointmvc-16.png");
+	background-repeat: no-repeat;
+	height: 16px;
+	width: 16px;
+	display: inline-block;
+}
+
+.icon-madbee {
+	background-image: url("//madb.bit13.com/assets/images/madbee-16.png");
 	background-repeat: no-repeat;
 	height: 16px;
 	width: 16px;
