--- a/Razzle/Razzle/Views/Shared/_NavigationPartial.cshtml
+++ b/Razzle/Razzle/Views/Shared/_NavigationPartial.cshtml
@@ -13,9 +13,12 @@
 <li class="divider hidden" data-scroll-show-low="265" data-scroll-toggle="hidden"></li>
 <li><a href="@Url.Action("","")#license" data-scroll="click" class="track"><i class="mrs fa fa-certificate text-white"></i><span>License</span></a></li>
 
-<li class="divider razzle-top-navbar-hidden"></li>
-<li class="razzle-top-navbar-hidden"><a href="http://google.com/"><i class="fa fa-globe mrs"></i><span>Google - Side</span></a></li>
-
-
 <li class="divider razzle-side-navbar-hidden"></li>
-<li class="razzle-side-navbar-hidden"><a href="http://google.com/"><i class="fa fa-globe mrs"></i><span>Google - Top</span></a></li>
+<li class="dropdown razzle-side-navbar-hidden">
+	<a href="#" data-toggle="dropdown"><i class="mrs fa fa-bookmark text-white"></i><span class="mrs">Other Projects</span><b class="caret caret-white"></b></a>
+	<ul class="dropdown-menu">
+		<li><a href="http://camalotcommon.bit13.com/"><i class="mrs icon-camalotcommon"></i><span>Camalot.Common</span></a></li>
+		<li><a href="http://endpointmvc.bit13.com/"><i class="mrs icon-endpointmvc"></i><span>EndpointMvc</span></a></li>
+		<li><a href="http://madb.bit13.com/"><i class="mrs icon-madbee"></i><span>MadBee</span></a></li>
+	</ul>
+</li>
