--- a/Razzle/Razzle/Views/Shared/DisplayTemplates/GistModel.cshtml
+++ b/Razzle/Razzle/Views/Shared/DisplayTemplates/GistModel.cshtml
@@ -3,7 +3,7 @@
 	<div class="gist-data-host">
 		@if(Model.AllowCopy) {
 			<div class="button-controls">
-				<a title="copy" href="#" data-copy="click" data-copy-target="[data-id='@Model'] .file-data .line-data pre" class="btn btn-round btn-info z-depth-1 mtml mrs"><i class="fa fa-copy"></i></a>
+				<a title="copy" href="#" data-copy="click" data-copy-target="[data-id='@Model.Id'] .file-data .line-data pre" class="btn btn-round btn-info z-depth-1 mtml mrs"><i class="fa fa-copy"></i></a>
 			</div>
 		}
 		<div data-id="@Model.Id">
