Some css tweaks. Added SVG logo

--- a/Razzle/Razzle/assets/styles/gist.less
+++ b/Razzle/Razzle/assets/styles/gist.less
@@ -12,12 +12,14 @@
 .gist-container {
 	.gist-data-host {
 		position: relative;
+
 		> .button-controls {
-			position: absolute; 
-			right: 10px; 
+			position: absolute;
+			right: 10px;
 			bottom: -15px;
 		}
 	}
+
 	.gist {
 		.gist-file {
 			border-width: 1px;
@@ -34,6 +36,12 @@
 
 			a:nth-child(1) {
 				display: none !important;
+			}
+		}
+
+		.gist-data {
+			.line-pre {
+				color: @text !important;
 			}
 		}
 
