--- a/Razzle/Razzle/assets/styles/main.less
+++ b/Razzle/Razzle/assets/styles/main.less
@@ -1,5 +1,6 @@
 ﻿@import "bootswatch-variables";
 @import "razzle-variables";
+
 .close {
 	line-height: 0.75;
 	outline: none;
@@ -44,20 +45,22 @@
 
 
 .logo {
-	background-image: url(../images/razzle-120-light.png);
+	background-image: url("/assets/logo/120/?light=true");
 	background-repeat: no-repeat;
 	background-position: center center;
-	height: 120px;
-	width: 120px;
+	height: 140px;
+	width: 155px;
 	margin-right: 20px;
+	margin-top: -10px;
 	display: inline-block;
 	opacity: 1;
 	.transition(opacity);
 
 	&.small {
-		background-image: url(../images/razzle-32-light.png);
+		background-image: url("/assets/logo/32/?light=true");
 		height: 32px;
-		width: 32px;
+		width: 42px;
+		margin-top: -3px;
 	}
 
 	&.logo-hidden {
